# book_reader_using_RAG

./: .env_example  .gitignore  README.md  frontend.env
backend/: main.py  pyproject.toml
backend/src/controller/: chat_controller.py  delete_controller.py  upload_controller.py
backend/src/environment/: environment_utilities.py
backend/src/services/: chat_service.py  upload_service.py
frontend/: main.py  pyproject.toml
frontend/.streamlit/: secrets.toml
notebook/: chat_creation.ipynb  populate_db.ipynb
