[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Book reading AI based assistant"
authors = ["Shathis Kannan <vshathiskannan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
langchain = "^0.2.12"
langchain-chroma = "^0.1.2"
langchain-huggingface = "^0.0.3"
langchain-groq = "^0.1.9"
langchain-community = "^0.2.11"
langchain-text-splitters = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
