[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "Frontend using Streamlit for the Chat application"
authors = ["Shathis Kannan Dev <vshathiskannan@gamil.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
